Remove builds property from vercel.json to resolve build settings warning

--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,6 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "api/submit.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "public/**",
-      "use": "@vercel/static"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/submit.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/public/$1"
-    }
-  ]
-}
+       "rewrites": [
+         { "source": "/api/(.*)", "destination": "/api/submit.js" },
+         { "source": "/(.*)", "destination": "/public/$1" }
+       ]
+     }
